# ArchMap

./: README.md  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  test_automated
src-tauri/src/: create_infra.rs  main.rs
src-tauri/src/rusible/: cli_command.rs  directory_manager.rs  mod.rs  read_template.rs
src-tauri/src/services/: create_infra.rs  docker_hub.rs  mod.rs
src-tauri/src/templates/: mod.rs  playbook_manager.rs  service_configs_manager.rs
src-tauri/src/templates/ansible_playbooks/: angular.yaml  check_and_create_dir.yaml  django.yaml  elysia.yaml  express.yaml  fastapi.yaml  gin.yaml  next.yaml  nuxt.yaml  react.yaml  sevelte.yaml  vue.yaml
src-tauri/src/templates/docker_composes/: service_configs.json
src-tauri/src/utils/: mod.rs
src-tauri/src/utils/ansible/: ansible_managers.rs  mod.rs  setup_ansible.sh
src-tauri/src/utils/docker/: docker_compose_managers.rs  mod.rs
src/components/: Canvas.tsx  ImageNode.tsx  LeftBar.tsx  RigthNavbar.tsx  TopNavbar.tsx
